--- a/testt/css/style.css
+++ b/testt/css/style.css
@@ -1,4 +1,3 @@
-/* variables */
 :root {
   --black: rgb(23, 23, 23);
   --white: rgb(248, 246, 246);
@@ -110,7 +109,7 @@ main {
   width: 20%;
   top: 20px;
   left: 20px;
-  font-size: small;
+  font-size: 15px;
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -147,7 +146,7 @@ main {
   border-radius: 7px;
   left: 20px;
   top: 220px;
-  font-size: small;
+  font-size: 15px;
   background-color: white;
   color: black;
   padding-left: 20px;
@@ -161,8 +160,8 @@ main {
    position: fixed;/* Stay in place */
   z-index:1000; /* Stay on top */
   top: 0;
-  right: 0;
-   background-color: var(--black); /* Black*/
+  left: 0;
+  background-color: #111; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
@@ -187,9 +186,9 @@ main {
 .sidebar .closebtn {
   position: absolute;
   top: 0;
-  right: 10px;
+  right: 25px;
   font-size: 35px;
-  margin-right: 30px;
+  margin-left: 60px;
 }
 
 /* The button used to open the sidebar */
@@ -198,7 +197,7 @@ main {
   cursor: pointer;
   background-color: #111;
   color: white;
-  padding: 10px 15px ;
+  padding: 10px 15px;
   border: none;
   border-radius: 10px;
 }
@@ -209,7 +208,7 @@ main {
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
 #main {
-  transition: margin-right     .5s; /* If you want a transition effect */
+  transition: margin-left .5s; /* If you want a transition effect */
   padding: 20px;
 }
 
@@ -224,25 +223,19 @@ main {
   box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
   margin-bottom: 1rem;
 }
-#player-form{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
-}
-input[type=submit]{
-  background-color: #eda132;
-  border: white;
-  height: 40px;
-  width: 122px;
-}
-input[type=text]{
-  border-color: #eda132;
-  height: 40px;
-  width: 40%;
-}
 
 
 
+
+/* Icon styles */
+/* .blue-icon {
+  background-color: #2474ff;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+}
+.flag-icon {
+  background-color: red;
+} */
 /* Icon styles */
 .blue-icon {
   background-color: #2474ff;
@@ -251,9 +244,15 @@ input[type=text]{
 }
 
 .green-icon {
-  background-color: red;
-
+  background-color: #27ba35;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
 }
 .game-stats.header{
  display: flex;
+}
+
+#flag{
+  width: 3rem;
+  height: 100%;
 }
