--- a/testt/css/style.css
+++ b/testt/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --black: rgb(23, 23, 23);
+  --black: #01011a;
   --white: rgb(248, 246, 246);
   --grey: rgb(128, 128, 128);
   --dark-grey: rgb(57, 57, 57);
@@ -27,7 +27,7 @@
 .flex-wrap {
   display: flex;
   flex-wrap: wrap;
-  background-color: #eda132;
+  background-color: #01012b;
 
 
 }
@@ -67,22 +67,28 @@ body {
   padding: 1rem;
 
 
+
 }
 h1.font-effect-fire{
  padding-bottom: 3rem;
    margin: 0;
   text-align: center;
-  font-size: 60px
+  font-size: 60px;
+  font-family: 'Zen Dots', cursive;
+  color: #05d9e8;
+  
+  
 }
 
 .page-footer {
   text-align: center;
 }
 
-.font-effect-fire{
 
-
-}
+/* .font-effect-fire {
+  text-shadow: 0 -0.05em 0.2em #FFF, 0.01em -0.02em 0.15em #FE0, 0.01em -0.05em 0.15em #FC0, 0.02em -0.15em 0.2em #F90, 0.04em -0.20em 0.3em #F70, 0.05em -0.25em 0.4em #F70, 0.06em -0.2em 0.9em #F50, 0.1em -0.1em 1.0em #F40;
+  color: #ffe;
+} */
 
 ion-icon {
   vertical-align: middle;
@@ -101,23 +107,25 @@ main {
   width: 100%;
   height: 70vh;
   position: relative;
+  filter: hue-rotate(120deg)
 
   }
 
-.country-facts{
-  position: absolute;
-  width: 20%;
-  top: 20px;
-  left: 20px;
-  font-size: 15px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
-  z-index: 999;
-  background-color:white;
-  border-radius: 7px;
-  opacity: 50%;
-  box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
+
+  .country-facts{
+    position: absolute;
+    width: 20%;
+    top: 20px;
+    left: 20px;
+    font-size: small;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    z-index: 999;
+    background-color:rgba(255, 255, 255, 0.501);
+    border-radius: 7px;
+    /* opacity: 50%; */
+    box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
 
 }
 .country-facts.fact-table{
@@ -126,12 +134,12 @@ main {
 .weather{
   position: absolute;
   z-index: 999;
-  opacity: 50%;
+  /* opacity: 50%; */
   border-radius: 7px;
 
   bottom: 20px;
   right: 20px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.726);
   color: black;
   padding-left: 20px;
   padding-right: 20px;
@@ -140,18 +148,19 @@ main {
 }
 
 .game-stats {
-  position: absolute;
-  z-index: 999;
-  opacity: 50%;
-  border-radius: 7px;
-  left: 20px;
-  top: 220px;
-  font-size: 15px;
-  background-color: white;
-  color: black;
-  padding-left: 20px;
-  padding-right: 20px;
-  box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
+    position: absolute;
+    z-index: 999;
+    /* opacity: 50%; */
+    border-radius: 7px;
+    left: 20px;
+    top: 220px;
+    font-size: small;
+    background-color: rgba(255, 255, 255, 0.50);
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
+  
 
 }
 .sidebar {
