--- a/testt/css/style.css
+++ b/testt/css/style.css
@@ -204,7 +204,7 @@ main {
 .openbtn {
   font-size: 30px;
   cursor: pointer;
-  background-color: #111;
+  background-color: #01012b;
   color: white;
   padding: 10px 15px;
   border: none;
