--- a/testt/css/style old version.css
+++ b/testt/css/style old version.css
@@ -1,4 +1,11 @@
+:root {
+  --black: #01011a;
+  --white: rgb(248, 246, 246);
+  --grey: rgb(128, 128, 128);
+  --dark-grey: rgb(57, 57, 57);
+}
 
+/* utilites */
 .button {
   display: block;
   padding: 0.5rem 1rem;
@@ -16,14 +23,14 @@
 .button:hover {
   transform: scale(1.1);
 }
-/* 
+
 .flex-wrap {
   display: flex;
   flex-wrap: wrap;
-  background-color:#01011a;
+  background-color: #01012b;
 
 
-} */
+}
 
 .space-evenly {
   justify-content: space-evenly;
@@ -44,29 +51,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color:#010127;
+  background-color: var(--white);
   scroll-behavior: smooth;
 }
 
-/* .container {
+.container {
   width: 100%;
-
-  background-color: #01011a;
-} */
-
-
-.page-header {
-  height: 17vh;
-  background-color:#01011a;
-  padding: 1rem;
+  position: relative;
 }
+
+.page-header,
 .page-footer {
-  /* background-color: var(--black); */
-  /* color: var(--white); */
-  padding-bottom: 1rem;
-  
-  /* height: 10%; */
-  background-color: #01011a;
+  background-color: var(--black);
+  color: var(--white);
+  padding: 1rem;
 
 
 
@@ -87,6 +85,11 @@ h1.font-effect-fire{
 }
 
 
+/* .font-effect-fire {
+  text-shadow: 0 -0.05em 0.2em #FFF, 0.01em -0.02em 0.15em #FE0, 0.01em -0.05em 0.15em #FC0, 0.02em -0.15em 0.2em #F90, 0.04em -0.20em 0.3em #F70, 0.05em -0.25em 0.4em #F70, 0.06em -0.2em 0.9em #F50, 0.1em -0.1em 1.0em #F40;
+  color: #ffe;
+} */
+
 ion-icon {
   vertical-align: middle;
 }
@@ -100,88 +103,66 @@ main {
   padding: 1rem 2rem;
 }
 
+#map {
+  width: 100%;
+  height: 70vh;
+  position: relative;
+  filter: hue-rotate(120deg)
 
+  }
 
 
   .country-facts{
-    display: flex;
-    position:relative;
+    position: absolute;
+    width: 20%;
+    top: 20px;
+    left: 20px;
     font-size: small;
-    
-    background-color:hsl(190, 100%, 91%);
-    /* border-radius: 7px; */
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    z-index: 999;
+    background-color:rgba(255, 255, 255, 0.501);
+    border-radius: 7px;
     /* opacity: 50%; */
     box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
 
-
 }
-.fact-table{
- 
-  border-collapse: separate; 
-  text-indent: initial;
-  border-spacing: 2rem 0.5rem;
-  width: 100%;
-  align-items: center;
-  /* border: 1px solid; */
+.country-facts.fact-table{
+  text-align: right;
 }
-
-
-
-
 .weather{
   position: absolute;
-  display: flex;
+  z-index: 999;
+  /* opacity: 50%; */
   border-radius: 7px;
-  top: 22rem;
-  right: 4rem;
-  background-color:hsla(190, 100%, 91%, 0.5);
+
+  bottom: 20px;
+  right: 20px;
+  background-color: rgba(255, 255, 255, 0.726);
   color: black;
-  padding-left: 0px;
+  padding-left: 20px;
   padding-right: 20px;
   box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
-}
-
-#meh {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-content: center;
-  height: auto;
-  top: 1rem;
-  position: relative;
-}
-#status-bar{
-  border-collapse: separate;
-  width: 100%;
-  text-indent: initial;
-  border-spacing: 2rem 1rem;
-  position: relative;
 
 }
+
 .game-stats {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content:center;
-  white-space:initial;
-
-  font-size: medium;
-  background-color:#05d9e8;
-  color: rgb(0, 0, 0);
-  box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
-
+    position: absolute;
+    z-index: 999;
+    /* opacity: 50%; */
+    border-radius: 7px;
+    left: 20px;
+    top: 220px;
+    font-size: small;
+    background-color: rgba(255, 255, 255, 0.50);
+    color: black;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
   
 
 }
-#map {
-  width:100%;
-  height: 70vh;
-  position: relative;
-  align-self:center;
-  border-radius: 0px 0px 0px 0px;
-  filter: hue-rotate(120deg);
-
-  }
 .sidebar {
    height: 100%;/* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
@@ -223,9 +204,9 @@ main {
 .openbtn {
   font-size: 30px;
   cursor: pointer;
-  background-color:#01012b;
+  background-color: #01012b;
   color: white;
-  padding: 0.5rem 0.5rem;
+  padding: 10px 15px;
   border: none;
   border-radius: 10px;
 }
@@ -245,7 +226,26 @@ main {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
 }
+#map
+ {
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
+  margin-bottom: 1rem;
+}
 
+
+
+
+/* Icon styles */
+/* .blue-icon {
+  background-color: #2474ff;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, 0.5);
+}
+.flag-icon {
+  background-color: red;
+} */
+/* Icon styles */
 .blue-icon {
   background-color: #2474ff;
   border-radius: 50%;
@@ -262,14 +262,13 @@ main {
 }
 
 #flag{
-  width: 4rem;
+  width: 3rem;
   height: 100%;
-
 }
 
 #player-form{
-  height: 90%;
-  padding-bottom: 2rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
   text-align: center;
   background-color: #01011a;
 }
@@ -285,32 +284,4 @@ input[type=text]{
   background-color: #01012b;
   height: 40px;
   width: 40%;
-}
-
-#gameover {
-  background-color: white;
-  /* position: absolute; */
-  
-}
-
-#timer{
-  color:#111;
-}
-
-
-  img.animated-gif{
-    width: 400px;
-    height: auto;
-    /* float:right; */
-    /* bottom: 20rem;
-    left: 20rem; */
-    position: absolute;
-    bottom: 6rem;
-    right:50rem;
-    opacity:0%
-  
-}
-
-.diice{
-  display: flex;
 }
