--- a/testt/css/story.css
+++ b/testt/css/story.css
@@ -15,6 +15,10 @@
   transition: all 300ms;
 }
 
+.easymode{
+  background-color: #05d9e8;
+}
+
 .button-white {
   background-color: var(--white);
   color: var(--black);
