--- a/testt/css/style.css
+++ b/testt/css/style.css
@@ -34,10 +34,6 @@
   height: auto;
 }
 
-
-
-
-
 /* app specific */
 html,
 body {
@@ -48,12 +44,6 @@ body {
   scroll-behavior: smooth;
 }
 
-/* .container {
-  width: 100%;
-
-  background-color: #01011a;
-} */
-
 
 .page-header {
   height: 17vh;
@@ -61,14 +51,8 @@ body {
   padding: 1rem;
 }
 .page-footer {
-  /* background-color: var(--black); */
-  /* color: var(--white); */
   padding-bottom: 1rem;
-  
-  /* height: 10%; */
   background-color: #01011a;
-
-
 
 }
 h1.font-effect-fire{
@@ -81,11 +65,9 @@ h1.font-effect-fire{
   
   
 }
-
 .page-footer {
   text-align: center;
 }
-
 
 ion-icon {
   vertical-align: middle;
@@ -100,33 +82,24 @@ main {
   padding: 1rem 2rem;
 }
 
-
-
-
-  .country-facts{
-    display: flex;
-    position:relative;
-    font-size: small;
-    
-    background-color:hsl(190, 100%, 91%);
-    /* border-radius: 7px; */
-    /* opacity: 50%; */
-    box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
-
+.country-facts{
+  display: flex;
+  position:relative;
+  font-size: small;
+  background-color:hsl(190, 100%, 91%);
+  box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
+  font-weight: bolder;
+  color: #010127;
 
 }
 .fact-table{
- 
+
   border-collapse: separate; 
   text-indent: initial;
   border-spacing: 2rem 0.5rem;
   width: 100%;
   align-items: center;
-  /* border: 1px solid; */
 }
-
-
-
 
 .weather{
   position: absolute;
@@ -156,6 +129,8 @@ main {
   text-indent: initial;
   border-spacing: 2rem 1rem;
   position: relative;
+  font-weight: bold;
+color: #010127;
 
 }
 .game-stats {
@@ -169,8 +144,6 @@ main {
   background-color:#05d9e8;
   color: rgb(0, 0, 0);
   box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
-
-  
 
 }
 #map {
@@ -292,25 +265,7 @@ input[type=text]{
   /* position: absolute; */
   
 }
-
 #timer{
   color:#111;
 }
 
-
-  img.animated-gif{
-    width: 400px;
-    height: auto;
-    /* float:right; */
-    /* bottom: 20rem;
-    left: 20rem; */
-    position: absolute;
-    bottom: 6rem;
-    right:50rem;
-    opacity:0%
-  
-}
-
-.diice{
-  display: flex;
-}
