--- a/testt/css/story.css
+++ b/testt/css/story.css
@@ -55,7 +55,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: var(--white);
+  background-color: #01012b;
   scroll-behavior: smooth;
 }
 .container {
@@ -166,7 +166,7 @@ h1.font-effect-fire{
 .story{
     background-color: #01012b;
     flex: 1;
-    min-height: 662px;
+    min-height: 750px;
     margin: 0;
     overflow: hidden !important;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -274,7 +274,12 @@ p{
 #rules{
     background-color: #01012b;
     color: white;
-    height: 500px;
+    height: 170px;
+}
+#textstory{
+    background-color: #01012b;
+    color: white;
+    height: 680px;
 }
 h2{
     text-align: center;
@@ -296,6 +301,6 @@ ol  {
 }
 @media screen and (min-height: 1080px) {
     .story{
-        height: 1070px;
+        height: 850px;
     }
 }
