--- a/testt/css/style.css
+++ b/testt/css/style.css
@@ -49,6 +49,7 @@ body {
   height: 17vh;
   background-color:#01011a;
   padding: 1rem;
+  padding-bottom:1rem;
 }
 .page-footer {
   padding-bottom: 1rem;
@@ -67,6 +68,8 @@ h1.font-effect-fire{
 }
 .page-footer {
   text-align: center;
+  color: #99dee3;
+  padding-top: 1rem;
 }
 
 ion-icon {
@@ -90,6 +93,7 @@ main {
   box-shadow: rgba(0, 0, 0, 0.3) 3px 3px 10px;
   font-weight: bolder;
   color: #010127;
+  border-radius: 0 0 1rem 1rem;
 
 }
 .fact-table{
@@ -122,6 +126,7 @@ main {
   height: auto;
   top: 1rem;
   position: relative;
+
 }
 #status-bar{
   border-collapse: separate;
@@ -130,7 +135,8 @@ main {
   border-spacing: 2rem 1rem;
   position: relative;
   font-weight: bold;
-color: #010127;
+  color: #010127;
+  border-radius: 1rem 1rem 1rem 1rem;
 
 }
 .game-stats {
@@ -139,7 +145,7 @@ color: #010127;
   display: flex;
   justify-content:center;
   white-space:initial;
-
+  border-radius: 1rem 1rem 0 0;
   font-size: medium;
   background-color:#05d9e8;
   color: rgb(0, 0, 0);
@@ -152,7 +158,7 @@ color: #010127;
   position: relative;
   align-self:center;
   border-radius: 0px 0px 0px 0px;
-  filter: hue-rotate(120deg);
+  filter: hue-rotate(120deg); 
 
   }
 .sidebar {
@@ -240,24 +246,125 @@ color: #010127;
 
 }
 
+#player-modal{
+  width: 100%;
+  position: absolute;
+  display: none;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  bottom: 10rem;
+ 
+}
 #player-form{
-  height: 90%;
-  padding-bottom: 2rem;
+  /* height: 90%; */
+  padding: 5rem 5rem 5rem 5rem; 
   text-align: center;
-  background-color: #01011a;
+  background-color: #01011ae5;
+  /* display: none; */
+  flex-direction: column;
+  align-items: center;
+  border-radius: 1rem;
 }
 input[type=submit]{
+  position: relative;
+  bottom: 1rem;
   background-color: #ff2a6d;
   border: white;
   height: 40px;
-  width: 122px;
+  width: 100%;
 }
 input[type=text]{
-  border-color: #ff2a6d;
+  /* border-color: #ff2a6d;
   color: #05d9e8;
-  background-color: #01012b;
+  background-color: #01012b0f;
   height: 40px;
-  width: 40%;
+  width: 100%; */
+
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  font-weight: bold;
+  color:#05d9e8;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #05d9e8;
+  outline: none;
+  background: transparent;
+}
+
+
+/* start game button */
+.start-game{
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: center;
+  position: relative;
+  top: 1rem;
+  
+}
+#start {
+  appearance: button;
+  position: relative;
+ 
+  /* left: 50rem; */
+  background-color: #901b40;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 10%;
+}
+
+#start:after {
+  background-clip: padding-box;
+  background-color: #ff2a6d;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+#start:main,
+#start:focus {
+  user-select: auto;
+}
+
+#start:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+#start:disabled {
+  cursor: auto;
 }
 
 #gameover {
@@ -266,6 +373,209 @@ input[type=text]{
   
 }
 #timer{
-  color:#111;
+  color:#01011a;
+}
+
+/* .leaflet-popup-pane{
+  z-index: 999;
+}
+.leaflet-popup-content-wrapper {
+  background-color:#05d9e8;
+  color:#01011a;
+  font-size:16px;
+  border-radius: 10px;
+  filter:hue-rotate(-120deg);
+  }
+.leaflet-popup-tip{
+  background-color:#05d9e8;
+  filter:hue-rotate(-120deg);
+}
+.leaflet-popup {
+  margin-bottom: 20px;
+}
+/* .leaflet-popup-content-wrapper a {
+    background-color:#05d9e8;
+    border-radius: 3px;
+  }
+.leaflet-popup-tip-container {
+  width:30px;
+  height:15px;
+  }
+.leaflet-popup-tip {
+    background: transparent;
+    border: none;
+    box-shadow: none;
+  } */ 
+/* 
+.newalert{
+  color:#010127;
+  display: none;
+  margin: 0;
+ 
+} */
+#custom-alert{
+ position: absolute;
+  top:32rem;
+  width: 30%;
+  left: 33rem;
+  height: 30%;
+  background-color: #d1f7ff99;
+  display: none;
+  /* display: flex; */
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-around;
+  margin: 0;
+  border-radius: 2rem;
+  /* padding-bottom: 1rem; */
+}
+
+#death {
+  position: absolute;
+  top:32rem;
+  width: 30%;
+  left: 33rem;
+  height: 30%;
+  background-color:#ff2a6ea0;
+  color: #010127;
+  display: none;
+
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: space-around;
+  margin: 0;
+  border-radius: 2rem;
+}
+#death-text{
+  text-align: center;
+}
+/* #oks{
+  background-color:#83193a;
+  padding: 1rem 2rem 1rem 2rem ; */
+
+/* CSS */
+#oks {
+
+  appearance: button;
+  background-color: #1899D6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 30%;
+}
+
+#oks:after {
+  background-clip: padding-box;
+  background-color: #1CB0F6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+#oks:main,
+#oks:focus {
+  user-select: auto;
+}
+
+#oks:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+#oks:disabled {
+  cursor: auto;
+}
+
+#stop {
+  position: relative;
+  float:right;
+  appearance: button;
+  background-color:  #901b40;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  /* display: inline-block; */
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 3%;
+}
+
+#stop:after {
+
+  background-clip: padding-box;
+  background-color:  #ff2a6d;;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+#stop:main,
+#stop:focus {
+  user-select: auto;
+}
+
+#stop:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+#stop:disabled {
+  cursor: auto;
 }
 
