--- a/game/css/story.css
+++ b/game/css/story.css
@@ -1,11 +1,3 @@
-:root {
-  --black: #01011a;
-  --white: rgb(248, 246, 246);
-  --grey: rgb(128, 128, 128);
-  --dark-grey: rgb(57, 57, 57);
-}
-
-/* utilites */
 .button {
   display: block;
   padding: 0.5rem 1rem;
@@ -14,9 +6,73 @@
   text-align: center;
   transition: all 300ms;
 }
+.page-header {
+  height: auto;
+  width: auto;
+  background-color:#01011a;
+  padding: 1rem;
+  padding-bottom:1rem;
+}
 
-.easymode{
-  background-color: #05d9e8;
+.easymode {
+  
+  appearance: button;
+  background-color:#04a7b2;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color:#01012b;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  width: 5%;
+}
+
+.easymode:after {
+  background-clip: padding-box;
+  background-color:#05d9e8;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.easymode:main,
+.easymode:focus {
+  user-select: auto;
+}
+
+.easymode:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+.easymode:disabled {
+  cursor: auto;
 }
 
 .button-white {
@@ -63,18 +119,17 @@ body {
   position: relative;
 }
 
-.page-header,
-.page-footer {
-  background-color: var(--black);
-  color: var(--white);
-  padding: 1rem;
-
-}
 
 .page-footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #01011a;
   text-align: center;
+  color: #99dee3;
+  align-content: center;
+  justify-content: center;
+  height: 5rem;
 }
-
 
 /* .font-effect-fire {
   text-shadow: 0 -0.05em 0.2em #FFF, 0.01em -0.02em 0.15em #FE0, 0.01em -0.05em 0.15em #FC0, 0.02em -0.15em 0.2em #F90, 0.04em -0.20em 0.3em #F70, 0.05em -0.25em 0.4em #F70, 0.06em -0.2em 0.9em #F50, 0.1em -0.1em 1.0em #F40;
@@ -95,7 +150,7 @@ main {
 }
 
 h1.font-effect-fire{
- padding-bottom: 3rem;
+
    margin: 0;
   text-align: center;
   font-size: 60px;
